--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="container">
       <div class="bg-img">
-        <!-- <div class="logo">
+        <div class="logo">
           <img src="jide.svg" alt="Logo" />
         </div>
         <div class="image-credit" title="jump to form">
@@ -33,10 +33,10 @@
               >Unsplash</a
             >
           </p>
-        </div> -->
+        </div>
       </div>
       <div class="form-container" id="form">
-        <!-- <div class="message">
+        <div class="message">
           <p>
             This is not real online service! You know you need something like
             this in your life to help you realize your deepest dreams. Sign up
@@ -90,8 +90,7 @@
                   <input
                     type="password"
                     name="password_confirm"
-                    id="password_confirm"
-                  />
+                    id="password_confirm" />
                 </label>
               </li>
             </ul>
@@ -100,7 +99,7 @@
         <div>
           <button type="submit">Create Account</button>
           <p>Already have an account? <a href="#">Log in</a></p>
-        </div> -->
+        </div>
       </div>
     </div>
   </body>
